open repository in external browser with branch (#284)
* Open repo in ext browser with branch

* Handled Github, Gitlab & Bitbucket domains for branch navigation. For other domains, navigation to repository would be supported

* Unit tests added